#pragma once

class WatchState
{
public:
    WatchState();

    void tick();
    void display();
};